Preparación para hacer deploy

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://frangardev.github.io/lazy-foxy",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
