--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://frangardev.com/lazy-foxy",
+  "homepage": "https://frangardev.github.io/lazy-foxy",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
